# AI_ORCHESTRATOR

./: .gitignore  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
config/: llm.yaml
config/goals/: example_goal.yaml  implement_auth.yaml
docker/: Dockerfile.python-runner
docs/: architecture.md  configuration.md  contributing.md  goal-yaml.md  index.md  running.md  setup.md  stages.md
plan/: AI-CRITICISM.md  AI-FAILURE-FIX.md  AI-FULL-PLAN.md  AI-REVIEWED-FULL-PLAN-Agnostic.md
plan/deprecated/: AI-REVIEWED-FULL-PLAN.md
plan/executed-stages/: post-stage-5-performance-report.md  stage-1-report.md  stage-2-report.md  stage-3-report.md  stage-4-report.md  stage-5-fixes-report.md  stage-5-report.md
scripts/: setup_env.sh
src/agents/: diagnostic.py  graph.py  nodes.py
src/core/: goal.py  llm.py  timing.py
src/io/: workspace.py
src/sandbox/: __init__.py  manager.py
src/state/: __init__.py  persistence.py  schema.py
src/tools/: __init__.py  runners.py  sandboxed_runner.py
tests/: conftest.py  test_core.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py
